Fix username alignment

--- a/src/modules/popouts/_account.scss
+++ b/src/modules/popouts/_account.scss
@@ -23,6 +23,10 @@
         }
     }
 
+    .headerTop-3GPUSF{
+        padding: 64px 12px 12px;
+    }
+
     .bodyInnerWrapper-2bQs1k{
         background-color: transparent;
         color: $TextFillColorPrimary;
